internal/provider/testdata/invalid-legacy-files/guide_invalid_frontmatter.html.markdown
---
subcategory: "Example"
layout: "example"
page_title: "Example Guide"
description: |-
Missing indentation.
---

# Example Guide

Example contents.
